<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tasks</string>
    <string name="notes_are_absent">Notes are absent</string>

    <string name="new_edit_fragment_task_new">NEW TASK</string>
    <string name="new_edit_fragment_task_edit">EDIT TASK</string>
    <string name="new_edit_fragment_done_checkbox_title">Done</string>
    <string name="new_edit_fragment_important_checkbox">Important</string>
    <string name="new_edit_fragment_field_title">Title</string>
    <string name="new_edit_fragment_field_message">Description</string>
    <string name="new_edit_fragment_btn_ok">Save</string>

    <string name="attached_link">link url</string>

    <string name="snack_bar_empty_task_title_forbidden">Title and message can\'t be empty</string>
    <string name="snack_bar_dates_picked">Date error</string>
    <string name="snack_bar_task_not_saved">Task saving error</string>
    <string name="snack_bar_all_finished_tasks_cleared">All finished tasks cleared</string>
    <string name="snack_bar_btn_undo_deleted">UNDO</string>
    <string name="snack_bar_message_task_new">New task added</string>
    <string name="snack_bar_message_task_edit">Task changed</string>
    <string name="snack_bar_message_task_del">Task deleted</string>

    <string name="sort_by_title">Sort by title</string>
    <string name="sort_by_icon">Sort by icon</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_important">Sort by important</string>
    <string name="sort_by_manual">Manual sorting</string>
    <string name="sort_by_reverse">Reverse order</string>

    <string name="options_hide_finished">Hide finished</string>
    <string name="options_clear_finished">Clear finished tasks</string>
    <string name="options_change_language">Change language</string>

    <string name="description_add_button">Add button</string>
    <string name="description_notes_are_absent">notes are absent</string>
    <string name="description_item">short description</string>

    <string name="dialog_delete_message">Clear all finished tasks?</string>
    <string name="dialog_delete_no">NO</string>
    <string name="dialog_delete_yes">YES</string>
    <string name="dialog_delete_task">Deletion confirm</string>
    <string name="dialog_delete_section">Delete Group?</string>
    <string name="dialog_sort_task">Sort task by image?</string>

    <string name="dialog_choose_language">Choose language</string>

    <string name="action_bar_item_title_sort">Sort</string>
    <string name="action_bar_item_title_search">Search</string>
    <string name="action_bar_item_title_preferences">Settings</string>

    <string name="add_edit_task_date_picker_label">Advanced options</string>
    <string name="manual_order_accepted">Changes saved</string>

    <string name="english_language">English language</string>
    <string name="polish_language">Polish language</string>
    <string name="spanish_language">Spanish language</string>
    <string name="ukraine_language">Ukrainian language</string>

    <string name="english_language_short" translatable="false">en</string>
    <string name="spanish_language_short" translatable="false">es</string>
    <string name="polish_language_short" translatable="false">pl</string>
    <string name="ukraine_language_short" translatable="false">ua</string>

    <string name="be_careful">Be careful next time!</string>

    <string name="detail_share_to">Share to:</string>
    <string name="click_me">click me</string>
    <string name="options_show_events">Hide events</string>
    <string name="add_edit_task_add_date_label">Add time limit</string>
    <string name="add_edit_task_add_alarm_label">Add alarm</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="expiration_date_format">Expiration date: %1$s - %2$s</string>
    <string name="no_name_title_task">Untitled task</string>
    <string name="sort_calendar">Calendar</string>

    <string name="sort_calendar_monday">Monday</string>
    <string name="sort_calendar_tuesday">Tuesday</string>
    <string name="sort_calendar_wednesday">Wednesday</string>
    <string name="sort_calendar_thursday">Thursday</string>
    <string name="sort_calendar_friday">Friday</string>
    <string name="sort_calendar_saturday">Saturday</string>
    <string name="sort_calendar_sunday">Sunday</string>

    <string name="sort_calendar_monday_short">Mon</string>
    <string name="sort_calendar_tuesday_short">Tue</string>
    <string name="sort_calendar_wednesday_short">Wed</string>
    <string name="sort_calendar_thursday_short">Thu</string>
    <string name="sort_calendar_friday_short">Fri</string>
    <string name="sort_calendar_saturday_short">Sat</string>
    <string name="sort_calendar_sunday_short">Sun</string>
    <string name="today">Today</string>

    <string name="january">january</string>
    <string name="february">february</string>
    <string name="march">march</string>
    <string name="april">april</string>
    <string name="maj">maj</string>
    <string name="june">june</string>
    <string name="july">july</string>
    <string name="august">august</string>
    <string name="september">september</string>
    <string name="october">october</string>
    <string name="november">november</string>
    <string name="december">december</string>

    <string name="error">error</string>
    <string name="calendar_tasks_strict_in_month">Month</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Tasks widget for every day</string>
    <string name="widget_tasks_count">Tasks for today: %1$d</string>
    <string name="open" >Open</string>

    <string name="created_date_format">Created: %1$s</string>
    <string name="take_photo">Take photo</string>
    <string name="delete_photo" >Delete photo</string>
    <string name="add_link">Add web url</string>
    <string name="add_photo">Add photo</string>
    <string name="add_audio">Add audio</string>
    <string name="zero_time" translatable="false">00:00</string>
    <string name="sections">Task categories</string>
    <string name="no_section" >no category</string>
    <string name="set_date_and_time">Set date and time</string>
    <string name="alarm_message" >Warning! Alarm for:</string>
    <string name="snack_bar_error_alarm_time">Incorrect alarm time!</string>
    <string name="task_alarm">Task alarm!</string>
    <string name="used_to_show_alarm_of_task">Used to show alarm of task</string>
    <string name="images_from_gallery">Images from gallery</string>
    <string name="nothing_attached_yet">Nothing attached yet</string>
    <string name="attached">Attached</string>

    <string name="enter_security_code">Enter your code</string>
    <string name="set_security_code">Set security code</string>
    <string name="minimum_4_characters">Minimum 4 characters</string>
    <string name="passwords_are_not_matching">Passwords are not matching</string>
    <string name="repeat_password">Repeat password</string>
    <string name="change_security_code">Change security code</string>
    <string name="wrong_password">Wrong password</string>
</resources>