<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_bar_item_title_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_sort_calendar"
        android:icon="@drawable/ic_calendar_menu"
        android:title="@string/sort_calendar"
        app:showAsAction="always" />

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/action_bar_item_title_sort"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">

        <menu>

            <item
                android:id="@+id/action_sort_by_title"
                android:title="@string/sort_by_title" />

            <item
                android:id="@+id/action_sort_by_date"
                android:title="@string/sort_by_date" />

            <item
                android:id="@+id/action_sort_by_important"
                android:title="@string/sort_by_important" />

            <item
                android:id="@+id/action_sort_by_manual"
                android:title="@string/sort_by_manual" />

            <item
                android:id="@+id/action_sort_desc_asc"
                android:title="@string/sort_by_reverse" />

        </menu>

    </item>

    <item
        android:id="@+id/action_hide_events"
        android:checkable="true"
        android:title="@string/options_show_events"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_hide_finished"
        android:checkable="true"
        android:title="@string/options_hide_finished"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_language"
        android:title="@string/options_change_language"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all_tasks"
        android:title="@string/options_clear_finished"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sections"
        android:title="@string/sections"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_preferences"
        android:title="@string/action_bar_item_title_preferences"
        app:showAsAction="never" />

</menu>