<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/all_tasks_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_new"
    android:elevation="0dp"
    tools:context=".presentation.fragment.main.fragment.AllTasksFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ic_welcome"
            android:layout_width="170dp"
            android:layout_height="182dp"
            android:contentDescription="@string/description_notes_are_absent"
            android:src="@drawable/ic_empty"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.22000003" />

        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/notes_are_absent"
            android:textColor="@color/white"
            android:textSize="10pt"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/ic_welcome"
            app:layout_constraintStart_toStartOf="@+id/ic_welcome"
            app:layout_constraintTop_toBottomOf="@+id/ic_welcome" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasks_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_anchor="@+id/constraintLayout"
            app:layout_anchorGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="10"
            tools:listitem="@layout/item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        style="@style/FloatBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/description_add_button"
        android:isScrollContainer="false"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/_01_button"
        app:useCompatPadding="false" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>